modifications and added appnew directory for UI

--- a/app/views/Groups.html
+++ b/app/views/Groups.html
@@ -1,8 +1,15 @@
 <div>
- 	<ul>
-		<li ng-repeat="x in list"> {{x.id}}</li>
-	</ul>
+	List Of All Groups:
+ 	<!-- <ul>
+		<li ng-repeat="x in list"> {{x.groupID}}</li>
 	
+	</ul> -->
+	
+	<table ng-repeat="x in list">
+		<tr>
+			<td> <h1>{{x.groupName}} <h1></td>	
+		</tr>
+	</table>
 <br>
 	
 </div>
