--- a/app/views/master.html
+++ b/app/views/master.html
@@ -7,6 +7,7 @@
 		<ul class="nav navbar-nav">
 			<li><a ui-sref="master.home">Home</a></li>
 			<li><a ui-sref="master.groups">Groups</a></li>
+			<li><a ui-sref="master.logout">Exit</a></li>
 		</ul>
 		
 		<img src="/content/images/Persistent.png" style="float: right">
