--- a/app/views/CreateGroup.html
+++ b/app/views/CreateGroup.html
@@ -1,4 +1,9 @@
 <div>		
-	Your Employee ID : 1 <br>
-	Name Your Group <input type="text" ng-blur="checkAvailability()" /> 
+	<form legend="sandbox" >
+	Your Employee ID : <input type="text" ng-model="eid"/> <br>
+	Name Your Group <input type="text" ng-model="groupName" ng-blur="checkAvailability()" /> <span ng-model="message" ng-show="message"> {{groupName}} {{message}}</span><br>
+	
+	<!-- Name Your Group <input type="text" ng-blur="checkAvailability()" />  -->
+	<button ng-click="createGroup()"> Submit </button>
+	</form>
 </div>
